// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ReactTags When ClearAll is true should render a clear all button 1`] = `
<div>
  <div
    class="ReactTags__tags react-tags-wrapper"
  >
    <p
      class="sr-only"
      role="alert"
      style="position: absolute; overflow: hidden; margin: -1px; padding: 0px; width: 1px; height: 1px; border: 0px;"
    />
    <div
      class="ReactTags__selected"
    >
      <span
        class="tag-wrapper ReactTags__tag"
        draggable="true"
        style="opacity: 1; cursor: move;"
      >
        Apple
        <button
          aria-label="Tag at index 0 with value Apple focussed. Press backspace to remove"
          class="ReactTags__remove"
          type="button"
        >
          ×
        </button>
      </span>
      <div
        class="ReactTags__tagInput"
      >
        <input
          aria-label="Press enter to add new tag"
          class="ReactTags__tagInputField"
          data-automation="input"
          data-testid="input"
          placeholder="Press enter to add new tag"
          type="text"
          value=""
        />
        <button
          class="ReactTags__clearAll"
        >
          Clear all
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test ReactTags When editable should update the tag to input and focus the tag when clicked 1`] = `
<div>
  <div
    class="ReactTags__tags react-tags-wrapper"
  >
    <p
      class="sr-only"
      role="alert"
      style="position: absolute; overflow: hidden; margin: -1px; padding: 0px; width: 1px; height: 1px; border: 0px;"
    />
    <div
      class="ReactTags__selected"
    >
      <span
        class="tag-wrapper ReactTags__tag"
        draggable="true"
        style="opacity: 1; cursor: move;"
      >
        Apple
        <button
          aria-label="Tag at index 0 with value Apple focussed. Press backspace to remove"
          class="ReactTags__remove"
          type="button"
        >
          ×
        </button>
      </span>
      <div
        class="ReactTags__editTagInput"
      >
        <input
          class="ReactTags__editTagInputField"
          data-testid="tag-edit"
          value="Litchi"
        />
      </div>
      <span
        class="tag-wrapper ReactTags__tag"
        draggable="true"
        style="opacity: 1; cursor: move;"
      >
        Mango
        <button
          aria-label="Tag at index 2 with value Mango focussed. Press backspace to remove"
          class="ReactTags__remove"
          type="button"
        >
          ×
        </button>
      </span>
      <div
        class="ReactTags__tagInput"
      >
        <input
          aria-label="Press enter to add new tag"
          class="ReactTags__tagInputField"
          data-automation="input"
          data-testid="input"
          placeholder="Press enter to add new tag"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test ReactTags should render with expected props 1`] = `
Object {
  "allowAdditionFromPaste": true,
  "allowDeleteFromEmptyInput": true,
  "allowDragDrop": true,
  "allowUnique": true,
  "autocomplete": false,
  "autofocus": true,
  "clearAll": false,
  "delimiters": Array [
    10,
    13,
    9,
  ],
  "editable": false,
  "handleAddition": [Function],
  "handleClearAll": [Function],
  "handleDelete": [Function],
  "handleDrag": [Function],
  "inline": true,
  "inputFieldPosition": "inline",
  "inputProps": Object {},
  "labelField": "text",
  "onTagUpdate": [Function],
  "placeholder": "Press enter to add new tag",
  "readOnly": false,
  "suggestions": Array [
    Object {
      "id": "Banana",
      "text": "Banana",
    },
    Object {
      "id": "Apple",
      "text": "Apple",
    },
    Object {
      "id": "Apricot",
      "text": "Apricot",
    },
    Object {
      "id": "Pear",
      "text": "Pear",
    },
    Object {
      "id": "Peach",
      "text": "Peach",
    },
  ],
  "tags": Array [
    Object {
      "id": "Apple",
      "text": "Apple",
    },
  ],
}
`;
